# testing_pandera

./: pyproject.toml
src/: mytable.py
test/data/: invalid.csv  valid.csv
test/src/: test_mytable.py
